--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.2",
